WeekdayGame/styles/index.css
body section{
	margin: 5px;
}

section>p{
	margin: 0;
	margin-top: -15px;
}

#dateElement{
	font-weight: bold;
	font-size: clamp(1rem, 8vw, 3rem);
}

#btn-start{
	font-size: 100%;
	min-width: 15ch;
	width: 50vmin;
	min-height: 44px;
	height: 25vmin;
	margin: 20px;
}

section h1{
	margin-top: 5px;
	margin-bottom: 0;
	display: inline-block;
	min-width: 12ch;
	width: 20%;
}

#btn-next{
	flex: 1 100%;
	align-self: flex-end;
	display: inline-block;
	font-size: 2.5em;
	min-width: 8ch;
	min-height: 104px;
	height: 20vh;
	text-align: center;
	/*border-radius: 8px;*/
	cursor:pointer;
}

.ButtonContainer{
	display: flex;
	flex-wrap: wrap;
}

.ansButton{
	flex: 1;
	font-size: 1.2em;
	min-width: 12ch;
	min-height: 74px;
	height: 12vh;
	text-align: center;
	cursor: pointer;
}

.ansButton[disabled]{
	cursor:not-allowed;
}

.ansButton[state="correct"]{
	background: rgb(204, 255, 153);
}

.ansButton[state="incorrect"]{
	text-decoration: line-through;
}

.scoreDisplay{
	float: right;
}

.scoreDisplay>label{
	display: block;
}


@media only screen and (max-width: 640px) {
	/* For mobile phones: */
	html .ansButton {
		flex: 1 100%;
		height: 9vh;
	}
	html #btn-next{
		height: 12vh;
	}
	html #dateElement{
		font-size: clamp(1rem, 10vw, 3rem);
		display: block;
	}
	html section>p{
		margin-top: 10px;
	}
	html footer{
		display: none;
	}
}

